<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/etTitulo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/titulo"
            android:padding="16dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etResumen"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/resumen"
            android:padding="16dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etFecha"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="Fecha"
            android:padding="16dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etImagenPortada"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/enlace_de_imagen"
            android:padding="16dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEnlace"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/enlace_de_la_noticia"
            android:padding="16dp"
            android:textSize="16sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="45dp" />

        <Button
            android:id="@+id/btn"
            android:layout_width="239dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/actualizar_noticia" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
